public_html/css/aboutus.css
:root {
    --foreground: #FFFFFF;
    --background: #000000;
    --placeholder: #808080;
}

img.avatar {
    display: block;
    background-color: var(--placeholder);
    border-radius: 50%;
    width: 120px;
    height: 120px;
    box-shadow: 0px 0px 20px #000000;
    transition: box-shadow 250ms ease-in-out;
}

img.avatar:hover {
    box-shadow: 0 0 20px #303030;
}

img.background-image {
    position: absolute;
    width: 100%;
    height: 100%;
    opacity: 0.2;
    top: 0;
    left: 0;
    z-index: -1;
}

body {
    color: var(--foreground);
    background-color: var(--background);
}

h1 {
    font-family: Sriracha, Arial, Helvetica, sans-serif;
}

h3 {
    font-family: Roboto, Arial, Helvetica, sans-serif;
}

main > h1, main > h3 {
    color: var(--foreground);
}

a, a:link, a:visited, a:hover, a:active {
    color: var(--foreground);
    text-decoration: none;
}

